# MediaScribe

./: .gitignore  LICENSE  README.md  mediascribe.toml  pyproject.toml  requirements.txt  transcribe.py
src/mediascribe/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  transcribe.py
tests/: test_transcribe.py
