[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediascribe"
version = "0.1.0"
description = "CLI tools for transcribing media with faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.3,<2.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.scripts]
mediascribe = "mediascribe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mediascribe"]

[[tool.mypy.overrides]]
module = ["faster_whisper", "faster_whisper.*"]
ignore_missing_imports = true
